--- a/packages/design-system/ui/utilities/visibility/flavors/assistive-text/_index.scss
+++ b/packages/design-system/ui/utilities/visibility/flavors/assistive-text/_index.scss
@@ -20,6 +20,7 @@
   height: 1px !important;
   overflow: hidden !important;
   clip: rect(0 0 0 0) !important;
+  text-transform: none !important;
 }
 
 /**
