chore(documentation): move data-table component annotations to _doc.scss (#2213)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -178,7 +178,7 @@
   'files/flavors/file-attachment/index',
 
   // Tables
-  'data-tables/index',
+  'data-tables/flavors/base/index',
   'data-tables/flavors/responsive/index',
   'data-tables/flavors/inline-edit/index',
   'data-tables/flavors/fixed-header/index',
