chore(documentation): move datepicker component annotations to _doc.scss (#2214)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -90,7 +90,7 @@
   'combobox/flavors/base/index',
 
   // Datepicker
-  'datepickers/index',
+  'datepickers/flavors/base/index',
   'datepickers/flavors/time/index',
 
   // Docked Composer
