chore(documentation): move docked-composer component annotations to _doc.scss (#2215)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -94,7 +94,7 @@
   'datepickers/flavors/time/index',
 
   // Docked Composer
-  'docked-composer/index',
+  'docked-composer/flavors/base/index',
   'docked-composer/flavors/email/index',
 
   // Docked Utility Bar
