chore(documentation): move file-selector component annotations to _doc.scss (#2219)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -57,7 +57,7 @@
   'docked-form-footer/flavors/base/index',
 
   // File selector
-  'file-selector/index',
+  'file-selector/flavors/files/index',
 
   // Page Headers
   'page-headers/index',
