chore(documentation): move global-navigation component annotations to _doc.scss (#2223)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -106,7 +106,7 @@
   'global-header/flavors/notifications/index',
 
   // Global Navigation
-  'global-navigation/index',
+  'global-navigation/flavors/navigation-bar/index',
 
   // Publishers
   'publishers/flavors/base/index',
