chore(documentation): move icon component annotations to _doc.scss (#2224)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -23,7 +23,7 @@
   'button-icons/flavors/base/index',
 
   // Icons
-  'icons/index',
+  'icons/flavors/base/index',
 
   // Accordion
   'accordion/flavors/base/index',
