chore(documentation): move lookup component annotations to _doc.scss (#2227)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -171,7 +171,7 @@
   'walkthrough/flavors/header/index',
 
   // Lookup
-  'lookups/index',
+  'lookups/flavors/base/index',
 
   // Images
   'avatar/flavors/base/index',
