chore(documentation): move menu component annotations to _doc.scss (#2228)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -79,7 +79,7 @@
   'tooltips/index',
 
   // Menus
-  'menus/index',
+  'menus/flavors/dropdown/index',
   'menus/flavors/action-overflow/index',
 
   // Picklist
