--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -119,7 +119,7 @@
   'feeds/flavors/post-with-attachments/index',
 
   // Modal
-  'modals/index',
+  'modals/flavors/base/index',
 
   // App Launcher
   'app-launcher/index',
