--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -60,7 +60,7 @@
   'file-selector/flavors/files/index',
 
   // Page Headers
-  'page-headers/index',
+  'page-headers/flavors/base/index',
   'page-headers/flavors/record-home/index',
   'page-headers/flavors/record-home-vertical/index',
   'page-headers/flavors/object-home/index',
