chore(documentation): move panel component annotations to _doc.scss (#2232)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -66,7 +66,7 @@
   'page-headers/flavors/object-home/index',
 
   // Panels
-  'panels/index',
+  'panels/flavors/detail/index',
   'panels/flavors/filtering/index',
 
   // Popovers
