chore(documentation): move picklist component annotations to _doc.scss (#2234)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -83,7 +83,7 @@
   'menus/flavors/action-overflow/index',
 
   // Picklist
-  'picklist/index',
+  'picklist/flavors/base/index',
 
   // Combobox
   'combobox/doc',
