chore(documentation): move popovers component annotations to _doc.scss (#2235)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -70,7 +70,7 @@
   'panels/flavors/filtering/index',
 
   // Popovers
-  'popovers/index',
+  'popovers/flavors/base/index',
   'popovers/flavors/panels/index',
   'popovers/flavors/nubbins/index',
   'popovers/flavors/walkthrough/index',
