chore(documentation): move RTE component annotations to _doc.scss (#2250)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -140,7 +140,7 @@
   'progress-indicator/flavors/base/index',
 
   // Rich Text Editor
-  'rich-text-editor/index',
+  'rich-text-editor/flavors/base/index',
 
   // Spinners
   'spinners/index',
