chore(documentation): move split-view component annotations to _doc.scss (#2251)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -148,7 +148,7 @@
   'spinners/flavors/colors/index',
 
   // Split view list
-  'split-view/index',
+  'split-view/flavors/base/index',
 
   // Title
   'tiles/index',
