chore(documentation): move tiles component annotations to _doc.scss (#2256)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -151,7 +151,7 @@
   'split-view/flavors/base/index',
 
   // Title
-  'tiles/index',
+  'tiles/flavors/base/index',
   'tiles/flavors/board/index',
 
   // Tabs
