chore(documentation): move tooltip component annotations to _doc.scss (#2258)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -76,7 +76,7 @@
   'popovers/flavors/walkthrough/index',
 
   // Tooltips
-  'tooltips/index',
+  'tooltips/flavors/base/index',
 
   // Menus
   'menus/flavors/dropdown/index',
