feat(visual-picker): Rename hero-buttons to visual-picker (#2267)
* feat(visual-picker): Rename hero-buttons to visual-picker

* feat(utilities): Add fixed width utility for media figure, Add box utility to handle interactions if applied to an actionable element

* chore(visual-picker): Remove hero button folder, clean up documentation, rename variants

* chore(visual-picker): Rename variant folders

* chore(visual-picker): Add release notes

--- a/packages/design-system/ui/components/visual-picker/_doc.scss
+++ b/packages/design-system/ui/components/visual-picker/_doc.scss
@@ -2,11 +2,10 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- *
- * @summary Hero buttons are either radio buttons, checkboxes, or links that are visually larger than regular buttons.
+ * @summary A visual picker can be either radio buttons, checkboxes, or links that are visually enhanced.
  *
  * @base
- * @name hero-buttons
- * @selector .slds-hero
+ * @name visual-picker
+ * @selector .slds-visual-picker
  * @support dev-ready
  */
