fix(global-navigation): A11y to split view toggle (#2130)
* a11y fixes to split view toggle global navigation

* update to aria-expanded

* update to docs

* doc updates

* update docs

--- a/packages/design-system/ui/components/global-navigation/flavors/navigation-bar/_index.scss
+++ b/packages/design-system/ui/components/global-navigation/flavors/navigation-bar/_index.scss
@@ -290,7 +290,15 @@
   }
 
   /**
-   * Tab modifier when using a tabset
+   *
+   * #### Accessibility
+   *
+   * On the Split View Toggle button, `aria-expanded` is set to `false` by default.
+   * Set `aria-expanded` to `true` when  Split View is active. When Split View is active,
+   * set the value of `aria-controls` on the Split View Toggle button, to the `ID` of the
+   * wrapper element that contains the Split View List.
+   *
+   * @summary Tab modifier when using a tabset
    *
    * @name navigation-tab-bar
    * @selector .slds-context-bar__item--tab
