fix(input-icon): applying color to input__icon was far reaching and c… (#2299)
* fix(input-icon): applying color to input__icon was far reaching and causing display bugs

* chore(input-icon): change name to text-light

--- a/packages/design-system/ui/components/icons/flavors/base/_index.scss
+++ b/packages/design-system/ui/components/icons/flavors/base/_index.scss
@@ -210,3 +210,13 @@ $bg-standard-map: map-merge($task2-monkey-patch, $bg-standard-map);
 .slds-icon-text-error {
   fill: $color-text-error;
 }
+
+/**
+ * @selector .slds-icon-text-light
+ * @restrict .slds-icon
+ * @modifier
+ * @group color
+ */
+.slds-icon-text-light {
+  fill: $color-text-input-icon;
+}
