chore(documentation): change category annotations to base and experience (#2302)

--- a/packages/design-system/ui/components/accordion/_doc.scss
+++ b/packages/design-system/ui/components/accordion/_doc.scss
@@ -8,6 +8,6 @@
  * @name accordion
  * @selector .slds-accordion
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type expandable-panel
  */
