--- a/packages/design-system/ui/components/alert/_doc.scss
+++ b/packages/design-system/ui/components/alert/_doc.scss
@@ -14,7 +14,7 @@
  * @name alert
  * @selector .slds-notify--alert
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type messaging
  * @role alert
  */
