--- a/packages/design-system/ui/components/avatar/_doc.scss
+++ b/packages/design-system/ui/components/avatar/_doc.scss
@@ -20,6 +20,6 @@
  * @name avatar
  * @selector .slds-avatar
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-display
  */
