--- a/packages/design-system/ui/components/breadcrumbs/_doc.scss
+++ b/packages/design-system/ui/components/breadcrumbs/_doc.scss
@@ -19,7 +19,7 @@
  * @name breadcrumbs
  * @selector .slds-breadcrumb
  * @support dev-ready
- * @category simple
+ * @category base
  * @type navigation
  * @role navigation
  */
