--- a/packages/design-system/ui/components/button-groups/_doc.scss
+++ b/packages/design-system/ui/components/button-groups/_doc.scss
@@ -15,7 +15,7 @@
  * @name button-groups
  * @base
  * @selector .slds-button-group
- * @category simple
+ * @category base
  * @type action
  * @role button
  * @support dev-ready
