--- a/packages/design-system/ui/components/button-icons/_doc.scss
+++ b/packages/design-system/ui/components/button-icons/_doc.scss
@@ -11,7 +11,7 @@
  * @base
  * @name button-icons
  * @selector .slds-button--icon
- * @category simple
+ * @category base
  * @type action
  * @role button
  * @support dev-ready
