--- a/packages/design-system/ui/components/buttons/_doc.scss
+++ b/packages/design-system/ui/components/buttons/_doc.scss
@@ -12,7 +12,7 @@
  * @name buttons
  * @base
  * @selector .slds-button
- * @category simple
+ * @category base
  * @type action
  * @role button
  * @support dev-ready
