--- a/packages/design-system/ui/components/checkbox-button-group/_doc.scss
+++ b/packages/design-system/ui/components/checkbox-button-group/_doc.scss
@@ -8,7 +8,7 @@
  * @name checkbox-button-group
  * @selector .slds-checkbox--button-group
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type data-entry
  * @role checkbox
  */
