--- a/packages/design-system/ui/components/checkbox/_doc.scss
+++ b/packages/design-system/ui/components/checkbox/_doc.scss
@@ -50,7 +50,7 @@
  * @name checkbox
  * @selector .slds-checkbox
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-entry
  * @role checkbox
  */
