--- a/packages/design-system/ui/components/combobox/_doc.scss
+++ b/packages/design-system/ui/components/combobox/_doc.scss
@@ -8,7 +8,7 @@
  * @name combobox
  * @selector .slds-combobox_container
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type user-input
  * @layout adaptive
  * @role combobox
