--- a/packages/design-system/ui/components/datepickers/_doc.scss
+++ b/packages/design-system/ui/components/datepickers/_doc.scss
@@ -8,7 +8,7 @@
  * @name datepickers
  * @selector .slds-datepicker
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type data-entry
  * @role grid
  */
