--- a/packages/design-system/ui/components/feeds/_doc.scss
+++ b/packages/design-system/ui/components/feeds/_doc.scss
@@ -15,6 +15,6 @@
  * @name feeds
  * @selector .slds-feed
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type data-display
  */
