--- a/packages/design-system/ui/components/input/_doc.scss
+++ b/packages/design-system/ui/components/input/_doc.scss
@@ -29,7 +29,7 @@
  * @name input
  * @selector .slds-input
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-entry
  * @layout responsive
  */
