--- a/packages/design-system/ui/components/lookups/_doc.scss
+++ b/packages/design-system/ui/components/lookups/_doc.scss
@@ -37,7 +37,7 @@
  * @name lookups
  * @selector .slds-lookup
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type user-input
  * @role combobox, listbox
  */
