--- a/packages/design-system/ui/components/menus/_doc.scss
+++ b/packages/design-system/ui/components/menus/_doc.scss
@@ -38,7 +38,7 @@
  * @name menus
  * @selector .slds-dropdown-trigger
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type navigation
  * @role menu
  */
