--- a/packages/design-system/ui/components/multi-select/_doc.scss
+++ b/packages/design-system/ui/components/multi-select/_doc.scss
@@ -34,7 +34,7 @@
  * @name multi-select
  * @selector .slds-picklist--draggable
  * @support prototype
- * @category complex
+ * @category experience
  * @type data-entry
  * @role listbox
  */
