--- a/packages/design-system/ui/components/panels/_doc.scss
+++ b/packages/design-system/ui/components/panels/_doc.scss
@@ -8,6 +8,6 @@
  * @name panels
  * @selector .slds-panel
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type data-display, user-input
  */
