--- a/packages/design-system/ui/components/picklist/_doc.scss
+++ b/packages/design-system/ui/components/picklist/_doc.scss
@@ -43,7 +43,7 @@
  * @name picklist
  * @selector .slds-picklist
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type user-input
  * @role combobox, listbox
  */
