--- a/packages/design-system/ui/components/progress-bar/_doc.scss
+++ b/packages/design-system/ui/components/progress-bar/_doc.scss
@@ -8,7 +8,7 @@
  * @name progress-bar
  * @selector .slds-progress-bar
  * @support dev-ready
- * @category simple
+ * @category base
  * @type process
  * @role progressbar
  */
