--- a/packages/design-system/ui/components/progress-indicator/_doc.scss
+++ b/packages/design-system/ui/components/progress-indicator/_doc.scss
@@ -20,6 +20,6 @@
  * @name progress-indicator
  * @selector .slds-progress
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type process
  */
