--- a/packages/design-system/ui/components/radio-button-group/_doc.scss
+++ b/packages/design-system/ui/components/radio-button-group/_doc.scss
@@ -8,7 +8,7 @@
  * @name radio-button-group
  * @selector .slds-radio--button-group
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-entry
  * @role radiogroup
  */
