--- a/packages/design-system/ui/components/radio-group/_doc.scss
+++ b/packages/design-system/ui/components/radio-group/_doc.scss
@@ -38,7 +38,7 @@
  * @name radio-group
  * @selector .slds-radio
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-entry
  * @role radiogroup
  */
