--- a/packages/design-system/ui/components/scoped-tabs/_doc.scss
+++ b/packages/design-system/ui/components/scoped-tabs/_doc.scss
@@ -44,7 +44,7 @@
  * @name scoped-tabs
  * @selector .slds-tabs--scoped
  * @support dev-ready
- * @category simple
+ * @category base
  * @type navigation
  * @role tablist
  */
