--- a/packages/design-system/ui/components/select/_doc.scss
+++ b/packages/design-system/ui/components/select/_doc.scss
@@ -18,7 +18,7 @@
  * @name select
  * @selector .slds-select
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-entry
  * @role listbox
  */
