--- a/packages/design-system/ui/components/tabs/_doc.scss
+++ b/packages/design-system/ui/components/tabs/_doc.scss
@@ -45,7 +45,7 @@
  * @name tabs
  * @selector .slds-tabs--default
  * @support dev-ready
- * @category simple
+ * @category base
  * @type navigation
  * @role tablist
  */
