--- a/packages/design-system/ui/components/textarea/_doc.scss
+++ b/packages/design-system/ui/components/textarea/_doc.scss
@@ -11,7 +11,7 @@
  * @name textarea
  * @selector .slds-textarea
  * @support dev-ready
- * @category simple
+ * @category base
  * @type data-entry
  * @role textbox
  */
