--- a/packages/design-system/ui/components/toast/_doc.scss
+++ b/packages/design-system/ui/components/toast/_doc.scss
@@ -14,7 +14,7 @@
  * @name toast
  * @selector .slds-notify_container
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type messaging
  * @role alert
  */
