--- a/packages/design-system/ui/components/tooltips/_doc.scss
+++ b/packages/design-system/ui/components/tooltips/_doc.scss
@@ -16,7 +16,7 @@
  * @name tooltips
  * @selector .slds-popover--tooltip
  * @support dev-ready
- * @category simple
+ * @category base
  * @type messaging
  * @role tooltip
  */
