--- a/packages/design-system/ui/components/file-selector/_doc.scss
+++ b/packages/design-system/ui/components/file-selector/_doc.scss
@@ -8,6 +8,6 @@
  * @name file-selector
  * @selector .slds-file-selector
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type user-input
  */
