--- a/packages/design-system/ui/components/prompt/_doc.scss
+++ b/packages/design-system/ui/components/prompt/_doc.scss
@@ -26,7 +26,7 @@
  * @name prompt
  * @selector .slds-modal--prompt
  * @support dev-ready
- * @category complex
+ * @category experience
  * @type messaging
  * @role alert
  */
