fix(name-value-list): change example to a dl (#2300)
* fix(name-value-list): add aria role list

* chore(name-value-list): add documentation

* chore(name-value-list): add role listitem to each node under role list

* change to dl

--- a/packages/design-system/ui/utilities/lists/_doc.scss
+++ b/packages/design-system/ui/utilities/lists/_doc.scss
@@ -8,6 +8,13 @@
  *
  * By default, a list is vertical, but you can change it to horizontal using these utility classes.
  *
+ * #### Accessibility
+ *
+ * In most cases, you should always try to be using ordered/unordered list or
+ * description list HTML structure. If for reasons unknown, you cannot use a list,
+ * please make sure you add `role="list"` to your top level element and `role="listitem"`
+ * to each descendant element under `role="list"`.
+ *
  * @summary A list groups related content together.
  *
  * @utility
