chore(buttons): cleaned up examples (#2340)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -18,6 +18,7 @@
   // Button
   'buttons/base/index',
   'buttons/stateful/index',
+  'buttons/with-icon/index',
 
   // Button Icon
   'button-icons/base/index',
