chore(form-layout): update examples (#2343)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -41,9 +41,8 @@
   'cards/base/index',
 
   // Forms
-  'form-layout/element/index',
+  'form-element/base/index',
   'input/base/index',
-  'input/read-only/index',
   'textarea/base/index',
   'radio-group/base/index',
   'radio-button-group/base/index',
