--- a/packages/design-system/ui/components/form-element/base/_index.scss
+++ b/packages/design-system/ui/components/form-element/base/_index.scss
@@ -4,9 +4,9 @@
 /**
  * @summary Creates layout for a form element
  *
- * @name element
+ * @name base
  * @selector .slds-form-element
- * @restrict div, fieldset, li, .slds-form
+ * @restrict div, fieldset, li
  * @variant
  */
 .slds-form-element {
@@ -105,6 +105,7 @@
  * @selector .slds-has-error
  * @restrict .slds-form-element
  * @modifier
+ * @group feedback
  */
 .slds-has-error {
 
