chore(checkbox): add button and toggle components back into nav (#2353)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -47,8 +47,8 @@
   'radio-group/base/index',
   'radio-button-group/base/index',
   'checkbox/base/index',
-  'checkbox/toggle/index',
-  'checkbox/button/index',
+  'checkbox-toggle/base/index',
+  'checkbox-button/base/index',
   'checkbox-button-group/base/index',
   'select/base/index',
   'multi-select/base/index',
