--- a/packages/design-system/ui/components/checkbox-button/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-button/base/_index.scss
@@ -2,27 +2,11 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * The ‘add button’ is similar to a checkbox in that it presents a user with a
- * binary choice for an item. However, the only action a user can take is to
- * add (or remove) an entity. When a user clicks the add button, the entity is
- * stored, similar to an ‘add to cart’ experience, until the user saves changes.
- *
- * The add button is useful for increasing clarity. Since the button only adds
- * or removes entities, the user knows the action they will prompt upon click.
- * The add button also provides a clear visual affordance (in SLDS, we use the
- * ‘+’ icon as an metaphor for ‘add’) and a large target to take this action.
- *
- * Use the add button if the component you’re building:
- * - Exists without other multi-select elements (i.e. checkboxes)
- * - Allows users to select multiple entities
- * - Semantically fits the add/remove model
- *
  * @summary Initializes checkbox add button
  *
  * @name base
  * @selector .slds-checkbox--add-button
  * @restrict div
- * @required
  * @variant
  */
 .slds-checkbox_add-button,
@@ -68,7 +52,7 @@
     }
   }
 
-  input[type=checkbox]:checked {
+  input[type="checkbox"]:checked {
 
     ~ .slds-checkbox_faux,
     ~ .slds-checkbox--faux,
@@ -100,7 +84,7 @@
     }
   }
 
-  input[type=checkbox]:focus {
+  input[type="checkbox"]:focus {
 
     ~ .slds-checkbox_faux,
     ~ .slds-checkbox--faux,
@@ -111,7 +95,7 @@
     }
   }
 
-  input[type=checkbox][disabled] {
+  input[type="checkbox"][disabled] {
 
     ~ .slds-checkbox_faux,
     ~ .slds-checkbox--faux,
