chore(visibility): annotation cleanup (#2357)

--- a/packages/design-system/ui/utilities/visibility/_doc.scss
+++ b/packages/design-system/ui/utilities/visibility/_doc.scss
@@ -6,6 +6,7 @@
  *
  * @utility
  * @name visibility
- * @selector *
+ * @selector [class*='show'], [class*='hide'], [class*='assistive-text']
  * support dev-ready
+ * @layout responsive
  */
